{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 68,
  "lineage": "d5d484ba-bd0e-bf12-6fff-5a76003b2d14",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0960a9bacbcfdb99c",
            "arn": "arn:aws:ec2:us-east-1:471112663419:elastic-ip/eipalloc-0960a9bacbcfdb99c",
            "domain": "vpc",
            "id": "eipalloc-0960a9bacbcfdb99c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-225-254-210.compute-1.amazonaws.com",
            "public_ip": "54.225.254.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-nat-eip",
              "Project": "vps-3tier"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-nat-eip",
              "Project": "vps-3tier"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a03ce9a6035af491",
            "arn": "arn:aws:ec2:us-east-1:471112663419:instance/i-086d3767f30b7b282",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086d3767f30b7b282",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vps-3tier-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e31894f57749bb65",
            "private_dns": "ip-10-0-2-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:471112663419:key/e6fcf10a-ed47-432d-9451-f51f3c1fc485",
                "throughput": 125,
                "volume_id": "vol-015745a42b782424b",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029ddd1a9d1ee63bb",
            "tags": {
              "3-tier": "true",
              "Docker": "true",
              "Environment": "dev",
              "Name": "vps-3tier-backend",
              "Project": "vps-3tier",
              "Tier": "Backend",
              "docker": "true",
              "docker-compose": "true"
            },
            "tags_all": {
              "3-tier": "true",
              "Docker": "true",
              "Environment": "dev",
              "Name": "vps-3tier-backend",
              "Project": "vps-3tier",
              "Tier": "Backend",
              "docker": "true",
              "docker-compose": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7e729b3c5a51630"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.backend_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.private_backend",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a03ce9a6035af491",
            "arn": "arn:aws:ec2:us-east-1:471112663419:instance/i-0a72295abf75bbcbd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a72295abf75bbcbd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vps-3tier-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa128bf3cb364ce3",
            "private_dns": "ip-10-0-3-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:471112663419:key/e6fcf10a-ed47-432d-9451-f51f3c1fc485",
                "throughput": 125,
                "volume_id": "vol-0f86022805445932c",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7e068f4dfdcf6e7",
            "tags": {
              "3-tier": "true",
              "Docker": "true",
              "Environment": "dev",
              "Name": "vps-3tier-database",
              "Project": "vps-3tier",
              "Tier": "Database",
              "docker": "true",
              "docker-compose": "true"
            },
            "tags_all": {
              "3-tier": "true",
              "Docker": "true",
              "Environment": "dev",
              "Name": "vps-3tier-database",
              "Project": "vps-3tier",
              "Tier": "Database",
              "docker": "true",
              "docker-compose": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d006959c93e5615f"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.backend_sg",
            "aws_security_group.database_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.private_database",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a03ce9a6035af491",
            "arn": "arn:aws:ec2:us-east-1:471112663419:instance/i-098369884a657abae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098369884a657abae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vps-3tier-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed483c18c88c5bf7",
            "private_dns": "ip-10-0-1-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.231",
            "public_dns": "ec2-34-207-147-253.compute-1.amazonaws.com",
            "public_ip": "34.207.147.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:471112663419:key/e6fcf10a-ed47-432d-9451-f51f3c1fc485",
                "throughput": 125,
                "volume_id": "vol-0bcf34acce4762a85",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014d04124c0b46576",
            "tags": {
              "3-tier": "true",
              "Docker": "true",
              "Environment": "dev",
              "Name": "vps-3tier-frontend",
              "Project": "vps-3tier",
              "Tier": "Frontend",
              "docker": "true",
              "docker-compose": "true"
            },
            "tags_all": {
              "3-tier": "true",
              "Docker": "true",
              "Environment": "dev",
              "Name": "vps-3tier-frontend",
              "Project": "vps-3tier",
              "Tier": "Frontend",
              "docker": "true",
              "docker-compose": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fdfb481caf2084c"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.frontend_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:internet-gateway/igw-00ea8d822978655ae",
            "id": "igw-00ea8d822978655ae",
            "owner_id": "471112663419",
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-igw",
              "Project": "vps-3tier"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-igw",
              "Project": "vps-3tier"
            },
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0960a9bacbcfdb99c",
            "association_id": "eipassoc-062bd3ce6124c3182",
            "connectivity_type": "public",
            "id": "nat-0554b472fbc2e181c",
            "network_interface_id": "eni-00f6dff6cb62e812f",
            "private_ip": "10.0.1.13",
            "public_ip": "54.225.254.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-014d04124c0b46576",
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-nat-gateway",
              "Project": "vps-3tier"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-nat-gateway",
              "Project": "vps-3tier"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:network-acl/acl-0acb862d4b9b6c3ad",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0acb862d4b9b6c3ad",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "471112663419",
            "subnet_ids": [
              "subnet-029ddd1a9d1ee63bb",
              "subnet-0e7e068f4dfdcf6e7"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-private-nacl",
              "Project": "vps-3tier"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-private-nacl",
              "Project": "vps-3tier"
            },
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_backend",
            "aws_subnet.private_database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:network-acl/acl-089a9fe4f1fb9ca14",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-089a9fe4f1fb9ca14",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "471112663419",
            "subnet_ids": [
              "subnet-014d04124c0b46576"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-public-nacl",
              "Project": "vps-3tier"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-public-nacl",
              "Project": "vps-3tier"
            },
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:route-table/rtb-0be5755ce8fb61d21",
            "id": "rtb-0be5755ce8fb61d21",
            "owner_id": "471112663419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0554b472fbc2e181c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-private-rt",
              "Project": "vps-3tier",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-private-rt",
              "Project": "vps-3tier",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:route-table/rtb-05fb4eb042dbed1f4",
            "id": "rtb-05fb4eb042dbed1f4",
            "owner_id": "471112663419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ea8d822978655ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-public-rt",
              "Project": "vps-3tier",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-public-rt",
              "Project": "vps-3tier",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062adeeb05a01e177",
            "route_table_id": "rtb-0be5755ce8fb61d21",
            "subnet_id": "subnet-029ddd1a9d1ee63bb"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_backend",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a28de97aa6089dda",
            "route_table_id": "rtb-0be5755ce8fb61d21",
            "subnet_id": "subnet-0e7e068f4dfdcf6e7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_database",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0284dbfc8da370699",
            "route_table_id": "rtb-05fb4eb042dbed1f4",
            "subnet_id": "subnet-014d04124c0b46576"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:security-group/sg-0a7e729b3c5a51630",
            "description": "Security group for backend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7e729b3c5a51630",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend API",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00fdfb481caf2084c"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Docker",
                "from_port": 2376,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00fdfb481caf2084c"
                ],
                "self": false,
                "to_port": 2376
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Frontend",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00fdfb481caf2084c"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vps-3tier-backend-sg20250926201526297200000004",
            "name_prefix": "vps-3tier-backend-sg",
            "owner_id": "471112663419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-backend-sg",
              "Project": "vps-3tier"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-backend-sg",
              "Project": "vps-3tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:security-group/sg-0d006959c93e5615f",
            "description": "Security group for database instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d006959c93e5615f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7e729b3c5a51630"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "MySQL/MariaDB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7e729b3c5a51630"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7e729b3c5a51630"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7e729b3c5a51630"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Frontend",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00fdfb481caf2084c"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vps-3tier-database-sg20250926201530049000000005",
            "name_prefix": "vps-3tier-database-sg",
            "owner_id": "471112663419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-database-sg",
              "Project": "vps-3tier"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-database-sg",
              "Project": "vps-3tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:security-group/sg-00fdfb481caf2084c",
            "description": "Security group for frontend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fdfb481caf2084c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vps-3tier-frontend-sg20250926201522049300000001",
            "name_prefix": "vps-3tier-frontend-sg",
            "owner_id": "471112663419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-frontend-sg",
              "Project": "vps-3tier"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-frontend-sg",
              "Project": "vps-3tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:subnet/subnet-029ddd1a9d1ee63bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029ddd1a9d1ee63bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112663419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-private-backend-subnet",
              "Project": "vps-3tier",
              "Tier": "Backend",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-private-backend-subnet",
              "Project": "vps-3tier",
              "Tier": "Backend",
              "Type": "Private"
            },
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:subnet/subnet-0e7e068f4dfdcf6e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7e068f4dfdcf6e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112663419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-private-database-subnet",
              "Project": "vps-3tier",
              "Tier": "Database",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-private-database-subnet",
              "Project": "vps-3tier",
              "Tier": "Database",
              "Type": "Private"
            },
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:subnet/subnet-014d04124c0b46576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014d04124c0b46576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112663419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-public-subnet",
              "Project": "vps-3tier",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-public-subnet",
              "Project": "vps-3tier",
              "Type": "Public"
            },
            "vpc_id": "vpc-034115cb080ec9608"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:vpc/vpc-034115cb080ec9608",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086bdcd0adb9fd809",
            "default_route_table_id": "rtb-0410480c74cdd3952",
            "default_security_group_id": "sg-0e0d25f5128d90073",
            "dhcp_options_id": "dopt-0e69a4ffbb56c01d9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034115cb080ec9608",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0410480c74cdd3952",
            "owner_id": "471112663419",
            "tags": {
              "Environment": "dev",
              "Name": "vps-3tier-vpc",
              "Project": "vps-3tier"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-3tier-vpc",
              "Project": "vps-3tier"
            }
          }
        }
      ]
    }
  ]
}